split VESA and VESA structures

--- a/boot/boot.vcxproj.filters
+++ b/boot/boot.vcxproj.filters
@@ -186,6 +186,9 @@
     <ClCompile Include="VESA.ixx">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
+    <ClCompile Include="VESA.structures.ixx">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <FASM Include="bootloader.asm">
