--- a/boot/boot.vcxproj
+++ b/boot/boot.vcxproj
@@ -358,6 +358,11 @@ del $(OutDir)$(TargetName)$(TargetExt)</Command>
       <FileType>Document</FileType>
     </ClCompile>
   </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="VESA.structures.ixx">
+      <FileType>Document</FileType>
+    </ClCompile>
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
     <Import Project="..\BuildCustomizations\fasm.targets" />
