add glm vec1 vec3 vec4

--- a/boot/boot.vcxproj
+++ b/boot/boot.vcxproj
@@ -272,6 +272,14 @@ del $(OutDir)$(TargetName)$(TargetExt)</Command>
     <ClCompile Include="driver.ixx" />
     <ClCompile Include="glm.ixx" />
     <ClCompile Include="glm.mat.ixx" />
+    <ClCompile Include="glm.setup.ixx" />
+    <ClCompile Include="glm.vec1.ixx">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
+      </ExcludedFromBuild>
+    </ClCompile>
+    <ClCompile Include="glm.vec2.ixx" />
+    <ClCompile Include="glm.vec3.ixx" />
+    <ClCompile Include="glm.vec4.ixx" />
     <ClCompile Include="memory.Heap.ixx" />
     <ClCompile Include="memory.PageIndex.ixx" />
     <ClCompile Include="memory.SMAP.ixx" />
