--- a/boot/boot.vcxproj
+++ b/boot/boot.vcxproj
@@ -272,6 +272,7 @@ del $(OutDir)$(TargetName)$(TargetExt)</Command>
     <ClCompile Include="driver.ixx" />
     <ClCompile Include="glm.ixx" />
     <ClCompile Include="glm.mat.ixx" />
+    <ClCompile Include="glm.mat2x2.ixx" />
     <ClCompile Include="glm.setup.ixx" />
     <ClCompile Include="glm.vec1.ixx">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
