--- a/boot/boot.vcxproj
+++ b/boot/boot.vcxproj
@@ -276,6 +276,7 @@ del $(OutDir)$(TargetName)$(TargetExt)</Command>
     <ClCompile Include="glm.mat2x3.ixx" />
     <ClCompile Include="glm.mat2x4.ixx" />
     <ClCompile Include="glm.mat3x2.ixx" />
+    <ClCompile Include="glm.mat3x3.ixx" />
     <ClCompile Include="glm.matrix.ixx" />
     <ClCompile Include="glm.setup.ixx" />
     <ClCompile Include="glm.vec1.ixx">
