--- a/boot/boot.vcxproj.filters
+++ b/boot/boot.vcxproj.filters
@@ -228,6 +228,9 @@
     <ClCompile Include="glm.mat3x2.ixx">
       <Filter>Исходные файлы\glm</Filter>
     </ClCompile>
+    <ClCompile Include="glm.mat3x3.ixx">
+      <Filter>Исходные файлы\glm</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <FASM Include="bootloader.asm">
