--- a/boot/boot.vcxproj.filters
+++ b/boot/boot.vcxproj.filters
@@ -264,6 +264,9 @@
     <ClCompile Include="SMBIOS.structures.ixx">
       <Filter>Исходные файлы\SMBIOS</Filter>
     </ClCompile>
+    <ClCompile Include="sl.algorithm.ixx">
+      <Filter>Исходные файлы\std</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <FASM Include="bootloader.asm">
