--- a/boot/boot.vcxproj
+++ b/boot/boot.vcxproj
@@ -86,7 +86,7 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <GenerateManifest>false</GenerateManifest>
-    <TargetExt>.bin</TargetExt>
+    <TargetExt>.exe</TargetExt>
     <LibraryWPath>$(LibraryWPath)</LibraryWPath>
     <LibraryPath>$(LibraryPath)</LibraryPath>
     <ExecutablePath>$(ExecutablePath)</ExecutablePath>
@@ -255,7 +255,7 @@ qemu-system-x86_64 -drive format=raw,file=$(SolutionDir)$(Platform)\$(Configurat
       <LinkTimeCodeGeneration>false</LinkTimeCodeGeneration>
     </Lib>
     <PostBuildEvent>
-      <Command>objcopy -O binary $(OutDir)boot.bin $(OutDir)os.bin
+      <Command>objcopy -O binary $(OutDir)$(TargetName)$(TargetExt) $(OutDir)os.bin
 align $(OutDir)os.bin 10485760
 sfk partcopy $(OutDir)os.bin 0 10485760 $(OutDir)boot.vhd 0 -yes
 qemu-system-x86_64 -display sdl -machine q35 -serial file:$(OutDir)serial.txt -drive format=raw,file="$(OutDir)os.bin",id=disk,if=none -device ich9-ahci,id=ahci -device ide-hd,drive=disk,bus=ahci.0
