--- a/gnu-efi/gnu-efi.vcxproj.filters
+++ b/gnu-efi/gnu-efi.vcxproj.filters
@@ -105,5 +105,8 @@
     <ClCompile Include="lib\runtime\vm.c">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
+    <ClCompile Include="lib\x86_64\callwrap.c">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
